@startuml star
title GamefyDB — Galaxy Schema (4 dimensions + 2 facts)

hide circle
skinparam shadowing false
skinparam linetype ortho
skinparam DefaultFontName "Liberation Sans"
skinparam DefaultFontSize 10
skinparam ArrowColor #555555
skinparam ranksep 40
skinparam nodesep 30

skinparam class {
  BackgroundColor #EAF1FA
  BorderColor     #4A6FA5
  FontColor       #1F3A5F
  AttributeFontColor   #333333
  AttributeFontSize    10
}

' --- Dimensions (top row) ------------------------------------------------
' Order chosen so that each dimension sits above (or near) the fact it
' most often joins to: item -> transaction only ; cashier/terminal ->
' both facts (center) ; member -> both facts (right).
entity "dim_item" as di {
  + item_id : int  <PK>
  --
  item
  category
  unit_price
  quantite
  total_revenue
}

entity "dim_cashier" as dc {
  + cashier_id : int  <PK>
  --
  cashier_name
}

entity "dim_terminal" as dt {
  + terminal_id : int  <PK>
  --
  terminal
  terminal_type
}

entity "dim_member" as dm {
  + member_id : int  <PK>
  --
  username
  firstname
  lastname
  duration_min
  usage_tnd
  total_tnd
}

' --- Facts (bottom row) --------------------------------------------------
' fact_transaction sits under item+cashier (its non-shared dim is item)
' fact_session sits under terminal+member (its shared dims are on the right)
entity "fact_transaction" as ftx {
  + tx_id : int  <PK>
  --
  cashier_id  <FK>
  terminal_id <FK>
  item_id     <FK>
  member_id   <FK>
  --
  date
  category
  amount
}

entity "fact_session" as fse {
  + session_id : int  <PK>
  --
  cashier_id  <FK>
  terminal_id <FK>
  member_id   <FK>
  --
  start_time
  session_type
  duration_min
  total
}

' --- Layout hints --------------------------------------------------------
di -[hidden]r- dc
dc -[hidden]r- dt
dt -[hidden]r- dm
ftx -[hidden]r- fse

' --- Relationships -------------------------------------------------------
' Order matters with linetype ortho: declare shortest first so the
' router prefers them, then the cross-fact lines.
di ||--o{ ftx
dc ||--o{ ftx
dt ||--o{ ftx
dm ||--o{ ftx

dc ||--o{ fse
dt ||--o{ fse
dm ||--o{ fse

@enduml
